--- a/_includes/about_me.html
+++ b/_includes/about_me.html
@@ -9,17 +9,15 @@
     <div class="row">
 	    <div class="col-sm-6">
     		<p>
-            I have over 6 years of experience as a software engineer, and have worked
-            at both small startups and large organizations. While I'm a proficient full-stack
-            developer, my expertise is in building scalable backend services (API services, stream processing,
-            and async mechanisms).
+            I have over 4 years of experience as a software developer, and have worked
+            at both small startups and large organizations. 
         </p>
         <p>
            I love building things.
            While hard engineering problems are often intrinsically fun to tackle,
            I'm most attracted to solving real customer problems with a business justification.
            I'm looking for a senior individual contributor role where I can take on on collaborative
-           team leadership responsibilites, and gain experience with
+           team leadership responsibilites, and gain experience with development,
            architecture and project management.
         </p>
       </div>
