--- a/_includes/about_me.html
+++ b/_includes/about_me.html
@@ -16,7 +16,7 @@
            I love building things.
            While hard engineering problems are often intrinsically fun to tackle,
            I'm most attracted to solving real customer problems with a business justification.
-           I'm looking for a senior individual contributor role where I can take on on collaborative
+           I'm looking for a senior individual contributor role where I can take on collaborative
            team leadership responsibilites, and gain experience with development,
            architecture and project management.
         </p>
