--- a/_includes/interests.html
+++ b/_includes/interests.html
@@ -13,7 +13,7 @@
         </p>
 			<ul>
 			  <li>
-				 <b>Deep learning</b>. It's an exciting time for machine learning. I'm working through several online classes, and swap articles with collegues.
+				 <b>Deep learning</b>. I'm working through several online classes, and swap articles with collegues.
 			  </li>
 			  <li>
 				  <b>RC Planes and Boats</b>. I've been an enthusiastic hobbiest since I was a teenager - but only as an adult am I able to afford the higher-quality
