--- a/_includes/about_me.html
+++ b/_includes/about_me.html
@@ -25,11 +25,10 @@
 		    <h3 style="margin-top:0;">Highlights</h3>
 		    <ul>
     			<li>
-            Migrated a monolithic Heroku Ruby on Rails API to multiple Scala
-            services hosted on AWS. Delivered ahead of schedule, projected to save $18k/quarter.
+            Object Oriented analysis, Design and Development of web, client-server and Windows application using .NET Technologies. 
     			</li>
           <li>
-            Presented research and proof-of-concept to convince team to move from Hadoop MR to Spark; reduced nodes by 60% and ran 5-8x faster.
+            Developed application with Camunda Workflow engine, which allows to express reliable service orchestration, human task flows, event handling and much more in diagrams that are technically executable.
           <li>
             Automated test automation in ramp-up to large data center migration, saving hundreds of developer hours.
     			<li>
