--- a/_includes/about_me.html
+++ b/_includes/about_me.html
@@ -22,20 +22,25 @@
         </p>
       </div>
 	    <div class="col-sm-6">
-		    <h3 style="margin-top:0;">Highlights</h3>
+		    <h3 style="margin-top:0;">Summary</h3>
 		    <ul>
     			<li>
-            Object Oriented analysis, Design and Development of web, client-server and Windows application using .NET Technologies. 
+            Performed analysis, design and development of the application using .NET Technologies, according to the user requirements. 
     			</li>
+			    <li>
+	    Experience of working on Microsoft .NET Framework, ASP.NET, ASP.NET MVC, C#, SQL Server and development, consuming and manipulating data using ADO.NET, LINQ and Entity Framework.
+			    </li>
           <li>
-            Developed application with Camunda Workflow engine, which allows to express reliable service orchestration, human task flows, event handling and much more in diagrams that are technically executable.
-          <li>
-            Automated test automation in ramp-up to large data center migration, saving hundreds of developer hours.
+            Used JavaScript, jQuery and AJAX to develop dynamic web applications for enhanced user experience. 
+          </li>
+			    <li>
+            Experience in using GIT, TFS and SVN for Version Control.
+			    </li>
     			<li>
-            Presented "Understanding the GIL to Prevent Race Conditions" at RubyConf 2016.
+            Worked on Scaffolding Templates, Custom Html Helpers, Razor View Engine and Action Filters on ASP.NET MVC applications. 
     			</li>
     			<li>
-            Awarded patent for novel approach to item normalization in 3rd party catalog data feeds.
+            Ability to plan and implement all the different stages of Software Development Life Cycle including System Analysis, User Requirements Determination, Data modeling, Coding, Implementation and Testing.
     			</li>
 		    </ul>
 	    </div>
