--- a/_includes/interests.html
+++ b/_includes/interests.html
@@ -6,7 +6,25 @@
                 <hr />
             </div>
         </div>
-            <div class="row">
+            <div class="row">    
+ <div class="col-sm-6">
+		    <p>
+			    My personal interests include:
+        </p>
+			<ul>
+			  <li>
+				 <b>Deep learning</b>. I'm working through several online classes, and swap articles with collegues.
+			  </li>
+			  <li>
+				  <b>RC Planes and Boats</b>. I've been an enthusiastic hobbiest since I was a teenager - but only as an adult am I able to afford the higher-quality
+          devices. I like to modify existing kits to improve speed, and add instrumentation.
+			  </li>
+			  <li>
+				  <b>Mountaineering</b>. I live in the Pacific Northwest, home of some of the greatest mountains and trails in the country. I enjoy spending weekends
+          on scrambles and getting lost in the woods.
+      </li>
+			</ul>
+		</div>
     <div class="col-sm-6">
       <h3 style="margin-top:0">Recent Projects</h3>
 		  <ul>
