--- a/_includes/interests.html
+++ b/_includes/interests.html
@@ -11,8 +11,10 @@
       <h3 style="margin-top:0">Recent Projects</h3>
 		  <ul>
   			<li>
-          OpenGidget is an open-source fork of Raspbian Linux that makes it easier to auto-provision a headless Raspberry PI,
-          get it onto your WiFi network, and deploy simple Python and Ruby scripts that run at startup - all without needing to plug in a keyboard/monitor.
+				<b>Miles - Workflow (Moneyware Data Migration Portal)</b>: The project involves creating BPMN workflow diagrams and execute the workflows and decesions from a remote application.
+			  <li>Resposibilities : </br>
+			    Developed web-applications using C#, ASP.NET MVC, Web-API, Camunda(BPM) and JQuery. </li>
+
     		</li>
   			<li>
           My Medium blog covers my ongoing attempts to instrument and automate everything in my house.
