--- a/_includes/interests.html
+++ b/_includes/interests.html
@@ -11,13 +11,16 @@
       <h3 style="margin-top:0">Recent Projects</h3>
 		  <ul>
   			<li>
-				<b>Miles - Workflow (Moneyware Data Migration Portal)</b>: The project involves creating BPMN workflow diagrams and execute the workflows and decesions from a remote application.
-			  <li>Resposibilities : </br>
-			    Developed web-applications using C#, ASP.NET MVC, Web-API, Camunda(BPM) and JQuery. </li>
+				<b>Miles - Workflow (Moneyware Data Migration Portal)</b>: The project involves creating BPMN workflow diagrams and execute the workflows and decesions from a remote application.</br>
+			  Resposibilities : </br>
+		    * Developed web-applications using C#, ASP.NET MVC, Web-API, Camunda(BPM) and JQuery.</br>
+	    *Writing SQL business queries, procedures,scripts.
 
     		</li>
   			<li>
-          My Medium blog covers my ongoing attempts to instrument and automate everything in my house.
+				<b>PHDC - Mobile Electronic Data Collection</b>: The project involves end to end implementation of web portal which will help client to register through online portal, for the servicesrelated to housing development.</br>
+Responsibilities : </br>
+* Developed API's for Mobile and Web Portal using .NET Web API.
   			</li>
   		    </ul>
   		    <h3>Other Things</h3>
