--- a/_includes/interests.html
+++ b/_includes/interests.html
@@ -12,24 +12,30 @@
 		  <ul>
   			<li>
 				<b>Miles - Workflow (Moneyware Data Migration Portal)</b>: The project involves creating BPMN workflow diagrams and execute the workflows and decesions from a remote application.</br>
-			  Resposibilities : </br>
+			  <b>Responsibilities</b> : </br>
 		    * Developed web-applications using C#, ASP.NET MVC, Web-API, Camunda(BPM) and JQuery.</br>
-	    *Writing SQL business queries, procedures,scripts.
+	    * Writing SQL business queries, procedures,scripts.
 
     		</li>
   			<li>
 				<b>PHDC - Mobile Electronic Data Collection</b>: The project involves end to end implementation of web portal which will help client to register through online portal, for the servicesrelated to housing development.</br>
-Responsibilities : </br>
+<b>Responsibilities</b> : </br>
 * Developed API's for Mobile and Web Portal using .NET Web API.
+  			</li>
+<li>
+				<b>Shipsurance Insurance Services</b>: Shipsurance, an Assurant Company, is a private shipping insurance provider. The projects involved end to end implementation of web portal using .NET MVC.</br>
+<b>Responsibilities</b> : </br>
+* Developed web-application using C#, ASP.NET MVC,AJAX and JQuery.</br>
+* Used LINQ for Entity Framework querying.
   			</li>
   		    </ul>
   		    <h3>Other Things</h3>
   		    <ul>
   			<li>
-           Volunteer at Boys and Girls club (since 2008)
+           Diploma in .NET Technologies 4.0 
   			</li>
   			<li>
-  			  Active member of The Seattle Ruby on Rails Developers Meetup Group.
+  			  Something more.....
   			</li>
 		   </ul>
       </div>
@@ -39,15 +45,13 @@ Responsibilities : </br>
         </p>
 			<ul>
 			  <li>
-				 <b>Deep learning</b>. I'm working through several online classes, and swap articles with collegues.
+				 <b>Deep learning</b>. I'm working through several online classes, and swap articles with colleagues.
 			  </li>
 			  <li>
-				  <b>RC Planes and Boats</b>. I've been an enthusiastic hobbiest since I was a teenager - but only as an adult am I able to afford the higher-quality
-          devices. I like to modify existing kits to improve speed, and add instrumentation.
+				  Computer Gaming
 			  </li>
 			  <li>
-				  <b>Mountaineering</b>. I live in the Pacific Northwest, home of some of the greatest mountains and trails in the country. I enjoy spending weekends
-          on scrambles and getting lost in the woods.
+				  <b>Trekking</b>.
       </li>
 			</ul>
 		</div>
