--- a/_includes/interests.html
+++ b/_includes/interests.html
@@ -14,20 +14,20 @@
 				<b>Miles - Workflow (Moneyware Data Migration Portal)</b>: The project involves creating BPMN workflow diagrams and execute the workflows and decesions from a remote application.</br>
 			  <b>Responsibilities</b> : </br>
 		    * Developed web-applications using C#, ASP.NET MVC, Web-API, Camunda(BPM) and JQuery.</br>
-	    * Writing SQL business queries, procedures,scripts.</br>
+	    * Writing SQL business queries, procedures,scripts.
 
-    		</li>
+    		</li></br>
   			<li>
 				<b>PHDC - Mobile Electronic Data Collection</b>: The project involves end to end implementation of web portal which will help client to register through online portal, for the servicesrelated to housing development.</br>
 <b>Responsibilities</b> : </br>
-* Developed API's for Mobile and Web Portal using .NET Web API.</br>
-  			</li>
+* Developed API's for Mobile and Web Portal using .NET Web API.
+  			</li></br>
 <li>
 				<b>Shipsurance Insurance Services</b>: Shipsurance, an Assurant Company, is a private shipping insurance provider. The projects involved end to end implementation of web portal using .NET MVC.</br>
 <b>Responsibilities</b> : </br>
 * Developed web-application using C#, ASP.NET MVC,AJAX and JQuery.</br>
-* Used LINQ for Entity Framework querying.</br>
-  			</li>
+* Used LINQ for Entity Framework querying.
+  			</li></br>
   		    </ul>
   		    <h3>Other Things</h3>
   		    <ul>
