--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+c<!DOCTYPE html>
 <html>
   <head>
       <meta charset="utf-8">
@@ -59,7 +59,7 @@
                        <a href="#about">About Me</a>
                    </li>
                    <li class="page-scroll">
-                       <a href="#interests">Interests</a>
+                       <a href="#interests">Experience</a>
                    </li>
                    <li class="page-scroll">
                        <a href="#contact">Contact</a>
