--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -59,7 +59,7 @@ c<!DOCTYPE html>
                        <a href="#about">About Me</a>
                    </li>
                    <li class="page-scroll">
-                       <a href="#interests">Experience</a>
+                       <a href="#interests">Interests</a>
                    </li>
                    <li class="page-scroll">
                        <a href="#contact">Contact</a>
