--- a/_includes/interests.html
+++ b/_includes/interests.html
@@ -48,7 +48,7 @@
 				 <b>Deep learning</b>. I'm working through several online classes, and swap articles with colleagues.
 			  </li>
 			  <li>
-				  Computer Gaming
+				  <b>Computer Gaming</b>
 			  </li>
 			  <li>
 				  <b>Trekking</b>.
